--- a/app.json
+++ b/app.json
@@ -1,7 +1,8 @@
 {
     "pages": [
         "pages/index/index",
-        "pages/logs/logs"
+        "pages/my/my",
+        "pages/video/video"
     ],
     "window": {
         "backgroundTextStyle": "light",
@@ -11,5 +12,29 @@
     },
     "style": "v2",
     "sitemapLocation": "sitemap.json",
-    "lazyCodeLoading": "requiredComponents"
+    "lazyCodeLoading": "requiredComponents",
+    "tabBar": {
+        "color": "#555",
+        "selectedColor": "#4b6ec1",
+        "list": [{
+                "pagePath": "pages/index/index",
+                "text": "首页",
+                "iconPath": "/static/images/tabs/home.png",
+                "selectedIconPath": "/static/images/tabs/home-active.png"
+            },
+            {
+                "pagePath": "pages/video/video",
+                "text": "视频",
+                "iconPath": "/static/images/tabs/tab-cate.png",
+                "selectedIconPath": "/static/images/tabs/tab-cate-current.png"
+            },
+            {
+                "pagePath": "pages/my/my",
+                "text": "我的",
+                "iconPath": "/static/images/tabs/tab-my.png",
+                "selectedIconPath": "/static/images/tabs/tab-my-current.png"
+            }
+
+        ]
+    }
 }
